FIx Layout Issues with Callout Section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -629,6 +629,7 @@ a {
 .callout {
   padding: 4rem;
   border-radius: 5px;
+  transform: translateY(5rem);
 }
 
 .callout--primary {
@@ -655,6 +656,12 @@ a {
 @media screen and (max-width: 300px) {
   .callout {
     padding: 2rem;
+  }
+}
+
+@media screen and (min-width: 340px) and (max-width: 390px) {
+  .callout {
+    padding: 2.2rem;
   }
 }
 
@@ -1011,6 +1018,7 @@ a {
 .block-showcase__features .media__title {
   color: white;
   font-weight: 600;
+  line-height: 1.3;
 }
 
 .block-showcase__image {
@@ -1046,6 +1054,10 @@ a {
 .footer .icon-container {
   position: relative;
   top: -1.2rem;
+}
+
+.footer__sections {
+  margin-top: 5rem;
 }
 
 .footer__section {
